[package]
name = "sark0y_tam_rst"
version = "1.9.63"
edition = "2021"
authors = ["Evgeney Knyazhev (SarK0Y) <sark0y@protonmail.com>"]
license-file = "LICENSE"
readme = "README.md"
crate_type = ["staticlib"]
[dependencies]
cli-table = "0.4.7"
once_cell = "1.18.0"
threadpool = "1.8.1"
chrono = "0.4.31"
substring = "1.4.5"
colored = "2.0.4"
num-traits = "0.2.17"
#c-gull = "0.15.31"
libc = "=0.2.149"
termios = "=0.3.3"
ansi_term = "0.12.1"
#stacker = "0.1.15"
#if_chain = "1.0.2"
#gag = "1.0.0"
#async-lock = "3.3.0"
#regex = "=1.10.3"
#rustix = "0.38.28"
#cached = "0.48.0"